--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "postinstall": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.20.1",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@babel/core": "^7.23.5",
