feat: add notification on successfull auth

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.48.2",
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
+    "redux": "^5.0.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.1",
     "zod": "^3.22.4"
@@ -33,6 +34,7 @@
     "@types/babel__preset-env": "^7",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "@types/react-redux": "^7.1.32",
     "@types/redux-persist": "^4.3.1",
     "@types/styled-components": "^5.1.32",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
