feat: add unit tests for components

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/react": "^14.1.2",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -22,6 +24,7 @@
     "react-redux": "^9.0.2",
     "react-router-dom": "^6.20.1",
     "redux": "^5.0.0",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.1",
     "zod": "^3.22.4"
@@ -31,12 +34,14 @@
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@testing-library/jest-dom": "^6.1.5",
     "@types/babel__core": "^7",
     "@types/babel__preset-env": "^7",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@types/react-redux": "^7.1.32",
+    "@types/redux-mock-store": "^1",
     "@types/styled-components": "^5.1.32",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
