fix: tsconfig fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,6 @@
     }
   },
   "include": ["src", "jest.config.ts"],
-  "exclude": ["node_modules", "src/**/*.cy.ts"],
+  "exclude": ["src/**/*.cy.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
