feat: add e2e tests (#16)
* feat: add e2e tests

* fix: fix eslintignore

* fix: fix declaration

* fix: tsconfig fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,11 +21,12 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "./",
+    "types": ["cypress"],
     "paths": {
       "@/*": ["src/*"]
     }
   },
   "include": ["src", "jest.config.ts"],
-  "exclude": ["node_modules"],
+  "exclude": ["src/**/*.cy.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
